--- a/package.json
+++ b/package.json
@@ -11,27 +11,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "^10.0.5",
-    "@angular/common": "^10.0.5",
-    "@angular/compiler": "^10.0.5",
-    "@angular/core": "^10.0.5",
-    "@angular/forms": "^10.0.5",
-    "@angular/platform-browser": "^10.0.5",
-    "@angular/platform-browser-dynamic": "^10.0.5",
-    "@angular/router": "^10.0.5",
+    "@angular/animations": "^10.0.7",
+    "@angular/common": "^10.0.7",
+    "@angular/compiler": "^10.0.7",
+    "@angular/core": "^10.0.7",
+    "@angular/forms": "^10.0.7",
+    "@angular/platform-browser": "^10.0.7",
+    "@angular/platform-browser-dynamic": "^10.0.7",
+    "@angular/router": "^10.0.7",
     "core-js": "^2.5.4",
-    "rxjs": "^6.6.0",
+    "rxjs": "^6.6.2",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "^0.1000.4",
-    "@angular/cli": "^10.0.4",
-    "@angular/compiler-cli": "^10.0.5",
-    "@angular/language-service": "^10.0.5",
+    "@angular-devkit/build-angular": "^0.1000.5",
+    "@angular/cli": "^10.0.5",
+    "@angular/compiler-cli": "^10.0.7",
+    "@angular/language-service": "^10.0.7",
     "@types/jasmine": "^2.8.17",
     "@types/jasminewd2": "~2.0.3",
-    "@types/node": "^12.12.52",
+    "@types/node": "^12.12.53",
     "codelyzer": "^5.1.2",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
@@ -42,7 +42,7 @@
     "karma-jasmine-html-reporter": "^1.5.0",
     "protractor": "~7.0.0",
     "ts-node": "~5.0.1",
-    "tslint": "~6.1.0",
+    "tslint": "^6.1.3",
     "typescript": "^3.9.7"
   }
 }
